--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+MY_KEY = "2eba41ba9a3e4e1f96b191904d4ad266"
+MY_URL = "https://newsapi.org"
