--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'kotlin-kapt'
     id "dagger.hilt.android.plugin"
     id "kotlin-parcelize"
+    id "androidx.navigation.safeargs.kotlin"
+
 }
 
 android {
@@ -35,10 +37,14 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures{
+        viewBinding true
+    }
 }
 
 dependencies {
 
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def lifecycle_version = "2.4.1"
     def arch_version = "2.1.0"
     def coroutine_version = "1.6.1"
@@ -53,7 +59,7 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
     // ViewModel
